--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
             <a class="main-nav" href="#javascript ">JavaScript</a>
         </nav>
     </header>
-        <section id="html" class="main-section">
-            <h1 class="main-title -second">HTML</h1>
-            <h2 class="title-second">Note name</h2>
-            <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
-        </section>
-        <section id="css" class="main-section">
-            <h1 class="main-title -second">CSS</h1>
-            <h2 class="title-second">Note name</h2>
-            <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
-        </section>
-        <section id="javascript" class="main-section">
-            <h1 class="main-title -second">JavaScript</h1>
-            <h2 class="title-second">Note name</h2>
-            <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
-        </section>
+    <section id="html" class="main-section">
+        <h1 class="main-title -second">HTML</h1>
+        <h2 class="title-second">Note name</h2>
+        <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
+    </section>
+    <section id="css" class="main-section">
+        <h1 class="main-title -second">CSS</h1>
+        <h2 class="title-second">Note name</h2>
+        <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
+    </section>
+    <section id="javascript" class="main-section">
+        <h1 class="main-title -second">JavaScript</h1>
+        <h2 class="title-second">Note name</h2>
+        <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
+    </section>
 </body>
 
 <footer class="main-footer">
-    <p>PdePH 2021 | Todos os direitos reservados &#169;</p>
+    <p>PdePH 2021 | All rights reserved &#169;</p>
     <div class="social">
-        <a href="https://linkedin.com/in/paulohsouza" class="social" target="_blank"><img src="img/linkedin.png" alt="Logo do Linkedin"></a>
-        <a href="https://medium.com/@pdeph" class="social" target="_blank"><img src="img/medium.png" alt="Logo do Medium"></a>
-        <a href="https://twitter.com/PdePH" class="social" target="_blank"><img src="img/twitter.png"alt="Logo do Twitter"></a>    
-        <a href="https://facebook.com/phsouza91" class="social" target="_blank"><img src="img/facebook.png" alt="Logo do Facebook"></a>
+        <a href="https://linkedin.com/in/paulohsouza" class="social" target="_blank"><img src="img/linkedin.png" alt="Linkedin logo"></a>
+        <a href="https://medium.com/@pdeph" class="social" target="_blank"><img src="img/medium.png" alt="Medium logo"></a>
+        <a href="https://twitter.com/PdePH" class="social" target="_blank"><img src="img/twitter.png" alt="Twitter logo"></a>
+        <a href="https://facebook.com/phsouza91" class="social" target="_blank"><img src="img/facebook.png" alt="Facebook logo"></a>
     </div>
 </footer>
 
-</html> 
+</html>
