--- a/index.html
+++ b/index.html
@@ -28,18 +28,15 @@
     </header>
     <section id="html" class="main-section">
         <h1 class="main-title -second">HTML</h1>
-        <h2 class="title-second">Note name</h2>
-        <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
+        <iframe src="first-article.html" frameborder="0" name="html-article"></iframe>
     </section>
     <section id="css" class="main-section">
         <h1 class="main-title -second">CSS</h1>
-        <h2 class="title-second">Note name</h2>
-        <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
+        <iframe src="second-article.html" frameborder="0" name="css-article"></iframe>
     </section>
     <section id="javascript" class="main-section">
         <h1 class="main-title -second">JavaScript</h1>
-        <h2 class="title-second">Note name</h2>
-        <p class="main-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae fugiat soluta iure quis. Aliquam rerum natus sint quibusdam tempore delectus quidem, animi dignissimos dolores facilis corrupti soluta, rem molestiae!</p>
+        <iframe src="third-article.html" frameborder="0" name="js-article"></iframe>
     </section>
 </body>
 
